--- a/templates/competences.html
+++ b/templates/competences.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet</title>
+    <title>Compétences</title>
     <link rel="icon" href="../static/house-solid.svg" type="image/x-icon">
 
     {% include 'link.html' %}
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="icon" href="../static/media/logo-transparent-png.png" sizes="64x64" type="image/png">
+
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Roboto&family=Roboto+Condensed:wght@300&display=swap');
@@ -31,7 +33,7 @@
         <div class="grid grid-cols-3 gap-24 mb-5">
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 25vh;">
+                    <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
@@ -45,12 +47,12 @@
             </div>
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 25vh;">
+                    <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
 
-                    <h1 class="text-white flex justify-center mt-2" style="width: 10vw;">CSS</h1>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">CSS</h1>
                 </div>
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
@@ -59,12 +61,12 @@
             </div>
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 25vh;">
+                    <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
 
-                    <h1 class="text-white flex justify-center mt-2" style="width: 10vw;">JavaScript</h1>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">JavaScript</h1>
                 </div>
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
@@ -73,12 +75,12 @@
             </div>
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/PHP.png" alt="" class="r" style="width: 15vw; height: 25vh;">
+                    <img src="../static/media/PHP.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
 
-                    <h1 class="text-white flex justify-center mt-2" style="width: 15vw;">PHP</h1>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">PHP</h1>
                 </div>
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
@@ -87,12 +89,12 @@
             </div>
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 25vh;">
+                    <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
 
-                    <h1 class="text-white flex justify-center mt-2" style="width: 15vw;">C-sharp</h1>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">C-sharp</h1>
                 </div>
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
@@ -101,12 +103,12 @@
             </div>
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/mysql.png" alt="" class="r" style="width: 15vw; height: 25vh;">
+                    <img src="../static/media/mysql.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
 
-                    <h1 class="text-white flex justify-center mt-2" style="width: 10vw;">MySQL</h1>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">MySQL</h1>
                 </div>
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
@@ -115,12 +117,12 @@
             </div>
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/python.png" alt=""   style="width: 15vw; height: 25vh;">
+                    <img src="../static/media/python.png" alt=""   style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
 
-                    <h1 class="text-white flex justify-center mt-2" style="width: 10vw;">Python</h1>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Python</h1>
                 </div>
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
@@ -129,12 +131,12 @@
             </div>
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/Bootstrap.png" alt=""  class="object-cover" style="width: 15vw; height: 25vh;">
+                    <img src="../static/media/Bootstrap.png" alt=""  class="" style="width: 10vw; height:20vh;">
 
                 </div>
                 <div class="flex justify-center">
 
-                    <h1 class="text-white flex justify-center mt-2" style="width: 10vw;">Bootstrap</h1>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Bootstrap</h1>
                 </div>
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
@@ -143,12 +145,12 @@
             </div>
             <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
-                    <img src="../static/media/Tailwindcss.svg.png" alt="" class="object-cover" style="width: 15vw; height: 25vh;">
+                    <img src="../static/media/Tailwindcss.svg.png" alt="" class="" style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
 
-                    <h1 class="text-white flex justify-center mt-2" style="width: 10vw;">Tailwind CSS</h1>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Tailwind CSS</h1>
                 </div>
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
