--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
-  <link rel="icon" href="../static/house-solid.svg" type="image/x-icon">
+  <link rel="icon" href="../static/media/logo-transparent-png.png" sizes="64x64" type="image/png">
 
   {% include 'link.html' %}
 
@@ -22,17 +22,17 @@
             <div class="grid grid-rows-2 grid-flow-col gap-x-32">
                 <div class=" text-white flex justify-center" style="font-size: 200px;"><i class="bi bi-phone"></i></div>
 
-                <a href="" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 " download>
+                <a href="#" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 " >
                      07 82 92 38 06   
                 </a>
                 <div class="  text-white flex justify-center" style="font-size: 200px;"><i class="bi bi-envelope"></i></div>
-                <a href="" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 " download>
+                <a href="#" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 " >
                      adil.khadich@gmail.com  
                 </a>
 
                 <div class="  text-white flex justify-center"  style="font-size: 200px;"><i class="bi bi-linkedin"></i></div>
 
-                <a href="https://www.linkedin.com/in/adil-khadich-289691237/" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 " target="_blank" download>
+                <a href="https://www.linkedin.com/in/adil-khadich-289691237/" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 " target="_blank" >
                       Linkedin 
                 </a>
             </div>
