--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acceuil</title>
-  <link rel="icon" href="../static/house-solid.svg" type="image/x-icon">
+  <link rel="icon" href="../static/media/logo-transparent-png.png" sizes="64x64" type="image/png">
 
   {% include 'link.html' %}
 
