--- a/templates/competences.html
+++ b/templates/competences.html
@@ -19,7 +19,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Roboto&family=Roboto+Condensed:wght@300&display=swap');
 </style>
 
-<body class="bg-neutral-900  ">
+<body class=" bg-neutral-900 ">
     <div class="scrollbar" id="style-1">
         <div class="force-overflow"></div>
     </div>
@@ -31,7 +31,7 @@
     <div style="width: 99vw;" class="flex justify-center mt-4 fade-in" >
 
         <div class="grid grid-cols-3 gap-24 mb-5">
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -45,7 +45,7 @@
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
             </div>
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -59,7 +59,7 @@
                 </div>
         
             </div>
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -73,7 +73,7 @@
                 </div>
         
             </div>
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/PHP.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -87,7 +87,7 @@
                 </div>
         
             </div>
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -101,7 +101,7 @@
                 </div>
         
             </div>
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/mysql.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -115,7 +115,7 @@
                 </div>
         
             </div>
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/python.png" alt=""   style="width: 10vw; height: 20vh;">
 
@@ -129,7 +129,7 @@
                 </div>
         
             </div>
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/Bootstrap.png" alt=""  class="" style="width: 10vw; height:20vh;">
 
@@ -143,7 +143,7 @@
                 </div>
         
             </div>
-            <div class="bg-neutral-800 rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
                 <div class="flex justify-center">
                     <img src="../static/media/Tailwindcss.svg.png" alt="" class="" style="width: 10vw; height: 20vh;">
 
@@ -169,12 +169,12 @@
 
     </div>
     <a href="{{ url_for('download_pdf') }}"
-        class="Bienvenue fade-in fixed mb-3  let-0 ml-2 w-12 hover:w-20 bottom-12 btn rounded-xl text-xl  bg-neutral-700 text-white hover:bg-neutral-800 btn   h-10 ml-2 mt-1"
+        class="Bienvenue fade-in fixed mb-3  let-0 ml-2 w-12 hover:w-20 bottom-12 btn rounded-xl text-xl  bg-neutral-700 text-white hover: btn   h-10 ml-2 mt-1"
         download style=" overflow: hidden;">
         <i class="bi bi-file-earmark-text"></i> <span style="font-family: 'titre', sans-serif !important">CV</span>
     </a>
     <a href="https://github.com/Adkhey74" target="_blank"
-        class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-neutral-700 text-xl text-white hover:bg-neutral-800"><i
+        class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-neutral-700 text-xl text-white hover:"><i
             class="bi bi-github"></i></a>
     <div id=""
         class="fade-in fixed mb-3 right-0 ml-2 bottom-0 btn rounded-xl text-xl  blur-sm text-white  btn  h-10 ml-2 mt-1  hover:blur-none ">
