--- a/templates/competences.html
+++ b/templates/competences.html
@@ -28,10 +28,10 @@
 
 
     </div>
-    <div style="width: 99vw;" class="flex justify-center mt-4 fade-in" >
+    <div style="width: 99vw;" class="flex justify-center mt-4 fade-in">
 
         <div class="grid grid-cols-3 gap-24 mb-5">
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
                     <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -45,7 +45,7 @@
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
                     <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -57,9 +57,9 @@
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
-        
+
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
                     <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -71,9 +71,9 @@
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
-        
+
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
                     <img src="../static/media/PHP.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -85,9 +85,9 @@
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
-        
+
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
                     <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -99,9 +99,9 @@
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
-        
+
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
                     <img src="../static/media/mysql.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -113,11 +113,11 @@
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
-        
+
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
-                    <img src="../static/media/python.png" alt=""   style="width: 10vw; height: 20vh;">
+                    <img src="../static/media/python.png" alt="" style="width: 10vw; height: 20vh;">
 
                 </div>
                 <div class="flex justify-center">
@@ -127,11 +127,11 @@
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
-        
+
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
-                    <img src="../static/media/Bootstrap.png" alt=""  class="" style="width: 10vw; height:20vh;">
+                    <img src="../static/media/Bootstrap.png" alt="" class="" style="width: 10vw; height:20vh;">
 
                 </div>
                 <div class="flex justify-center">
@@ -141,9 +141,9 @@
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
-        
+
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;" >
+            <div class=" rounded p-5 fade-in" style="width: 20vw;">
                 <div class="flex justify-center">
                     <img src="../static/media/Tailwindcss.svg.png" alt="" class="" style="width: 10vw; height: 20vh;">
 
@@ -155,7 +155,7 @@
                 <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
                     <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                 </div>
-        
+
             </div>
 
 
@@ -169,16 +169,16 @@
 
     </div>
     <a href="{{ url_for('download_pdf') }}"
-        class="Bienvenue fade-in fixed mb-3  let-0 ml-2 w-12 hover:w-20 bottom-12 btn rounded-xl text-xl  bg-neutral-700 text-white hover: btn   h-10 ml-2 mt-1"
-        download style=" overflow: hidden;">
+        class="Bienvenue fade-in fixed mb-3  let-0 ml-2 w-12 hover:w-20 bottom-12 btn rounded-xl text-xl  bg-neutral-700 text-white hover:bg-neutral-800 btn   h-10 ml-2 mt-1"
+        download style=" overflow: hidden;" target="_blank">
         <i class="bi bi-file-earmark-text"></i> <span style="font-family: 'titre', sans-serif !important">CV</span>
     </a>
     <a href="https://github.com/Adkhey74" target="_blank"
-        class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-neutral-700 text-xl text-white hover:"><i
+        class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-neutral-700 text-xl text-white hover:bg-neutral-800"><i
             class="bi bi-github"></i></a>
     <div id=""
-        class="fade-in fixed mb-3 right-0 ml-2 bottom-0 btn rounded-xl text-xl  blur-sm text-white  btn  h-10 ml-2 mt-1  hover:blur-none ">
-        <h1 style="font-family: 'titre', sans-serif !important">Dev by Adil Khadich</h1>
+        class="fade-in Bienvenue fixed mb-3 right-0 ml-2 bottom-0 btn rounded-xl text-xl  blur-sm text-white  btn  h-10 ml-2 mt-1  hover:blur-none ">
+        <span style="font-family: 'titre', sans-serif !important">Dev by Adil Khadich</span>
 
     </div>
 
