--- a/templates/About.html
+++ b/templates/About.html
@@ -19,7 +19,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Roboto&family=Roboto+Condensed:wght@300&display=swap');
 </style>
 
-<body class="bg-neutral-900  " >
+<body class="bg-neutral-900  ">
     <div class="scrollbar" id="style-1">
         <div class="force-overflow"></div>
     </div>
@@ -30,12 +30,13 @@
     </div>
     <div class="flex justify-center mt-5 fade-in" style="width: 100vw;">
 
-        <img src="../static/media/pp.jpg" class="fade-in rounded-full object-cover" alt="" style="width: 15vw; height: 30vh;">
+        <img src="../static/media/pp.jpg" class="fade-in rounded-full object-cover" alt=""
+            style="width: 15vw; height: 30vh;">
 
     </div>
     <div style="width: 90vw;height: 20vh; " class="mt-5 fade-in">
         <h2 class="text-neutral-400 text-4xl ml-28 fade-in  ">Qui suis-je ?</h2>
-        <p class="ml-28  mt-2 text-white  text-xl fade-in" >
+        <p class="ml-28  mt-2 text-white  text-xl fade-in">
             Je suis Adil Khadich, un étudiant passionné de 20 ans spécialisé dans le développement web.
             Originaire du monde du code, j'ai découvert ma passion pour la création de solutions numériques dès mon plus
             jeune âge. Mon parcours académique et mes projets personnels m'ont permis de développer des compétences
@@ -69,35 +70,49 @@
 
     </div> -->
     <div style="height: fit-content; width: fit-content;" class="mt-5 fade-in">
-        <h2 class="text-neutral-400 text-4xl ml-28  mb-2 fade-in " >Mes passions</h2>
-        <h2 class="text-neutral-500 text-2xl ml-28  fade-in " >L'E-sport</h2>
-        <p class="ml-28  mt-2 text-white  text-xl fade-in">
-            Je suis un grand fan de l'e-sport, et je prends beaucoup de plaisir à soutenir mes équipes préférées. J'apprécie particulièrement l'intensité des compétitions et le talent des joueurs. Mon intérêt pour l'e-sport va au-delà d'une simple distraction, c'est une véritable passion qui me permet de me connecter avec une communauté partageant les mêmes centres d'intérêt. Chaque match est une source d'excitation et de moments mémorables pour moi.
-    
-    
+        <h2 class="text-neutral-400 text-4xl ml-28  mb-2 fade-in ">Mes passions</h2>
+        <h2 class="text-neutral-500 text-2xl ml-28  fade-in ">L'E-sport</h2>
+        <p class="ml-28  mt-2 text-white mr-5 text-xl fade-in">
+            Je suis un grand fan de l'e-sport, et je prends beaucoup de plaisir à soutenir mes équipes préférées.
+            J'apprécie particulièrement l'intensité des compétitions et le talent des joueurs. Mon intérêt pour
+            l'e-sport va au-delà d'une simple distraction, c'est une véritable passion qui me permet de me connecter
+            avec une communauté partageant les mêmes centres d'intérêt. Chaque match est une source d'excitation et de
+            moments mémorables pour moi.
+
+
         </p>
         <div class="flex justify-center fade-in " style="width: 100vw;">
             <div class="grid grid-cols-2 gap-32">
-                <img src="../static/media/valo.png" class=" rounded mb-5 mt-5 "
-                style="width: 20vw; height: 32vh;">
-                <img src="../static/media/IMG_6414.jpg" class="object-cover rounded mb-5 mt-5 "
-                style="width: 35vw; height: 32vh;">
+                <img src="../static/media/valo.png" class=" rounded mb-5 mt-5 " style="width: 20vw; height: 32vh;">
+                <img src="../static/media/joblife.png" class="object-cover rounded mb-5 mt-5 "
+                    style="width: 35vw; height: 32vh;">
 
-    
+
             </div>
- 
+
         </div>
-        <h2 class="text-neutral-500 text-2xl ml-28  fade-in " >Le football</h2>
+        <h2 class="text-neutral-500 text-2xl ml-28  fade-in ">Le football</h2>
+        <p class="ml-28  mt-2 text-white  mr-5 text-xl fade-in">
+            Le football a vraiment marqué une décennie de ma vie, particulièrement au sein de clubs locaux comme Seynod,
+            Annecy-le-Vieux et Vieugy. Bien sûr, ce ne sont pas les clubs les plus renommés, mais chaque expérience a
+            laissé une empreinte significative sur moi. L'esprit d'équipe, que j'ai cultivé sur le terrain, s'est avéré
+            être une compétence transférable clé dans ma carrière de développeur web. Travailler en équipe, tout comme
+            sur le terrain de football, est essentiel dans le monde du développement. La collaboration, la communication
+            efficace et la résolution collective de problèmes sont des éléments qui ont trouvé une place naturelle dans
+            ma manière de travailler. Ces clubs, bien que modestes, ont donc joué un rôle déterminant en me fournissant
+            des compétences humaines et professionnelles précieuses, et je suis reconnaissant pour chaque leçon tirée de
+            ces expériences.
+        </p>
         <div class="flex justify-center fade-in " style="width: 100vw;">
             <img src="../static/media/foot.JPG" class="ml-28 rounded mb-5 mt-5 object-cover"
                 style="width: 30vw; height: 52vh;">
-    
+
         </div>
 
-    
-    
-    
-    
+
+
+
+
     </div>
 
     </div>
