--- a/templates/competences.html
+++ b/templates/competences.html
@@ -28,140 +28,142 @@
 
 
     </div>
-    <div style="width: 99vw;" class="flex justify-center mt-4 fade-in">
 
-        <div class="grid grid-cols-3 gap-24 mb-5">
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+        <div style="width: 99vw; height: 85vh; overflow:scroll;" class="flex justify-center mt-4 fade-in">
+
+            <div class="grid grid-cols-3 gap-24 mb-5">
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">HTML</h1>
+
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">CSS</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                    </div>
 
                 </div>
-                <div class="flex justify-center">
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
-                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">HTML</h1>
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">JavaScript</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 70%"></div>
+                    </div>
 
                 </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/PHP.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">PHP</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 75%"></div>
+                    </div>
+
                 </div>
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">C-sharp</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 62%"></div>
+                    </div>
+
+                </div>
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/mysql.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">MySQL</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 70%"></div>
+                    </div>
+
+                </div>
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/python.png" alt="" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Python</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 60%"></div>
+                    </div>
+
+                </div>
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/Bootstrap.png" alt="" class="" style="width: 10vw; height:20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Bootstrap</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                    </div>
+
+                </div>
+                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/Tailwindcss.svg.png" alt="" class="" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Tailwind CSS</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                    </div>
+
+                </div>
+
+
+
+
             </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 20vh;">
-
-                </div>
-                <div class="flex justify-center">
-
-                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">CSS</h1>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
-                </div>
-
-            </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 20vh;">
-
-                </div>
-                <div class="flex justify-center">
-
-                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">JavaScript</h1>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
-                </div>
-
-            </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/PHP.png" alt="" class="r" style="width: 10vw; height: 20vh;">
-
-                </div>
-                <div class="flex justify-center">
-
-                    <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">PHP</h1>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
-                </div>
-
-            </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 20vh;">
-
-                </div>
-                <div class="flex justify-center">
-
-                    <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">C-sharp</h1>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
-                </div>
-
-            </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/mysql.png" alt="" class="r" style="width: 10vw; height: 20vh;">
-
-                </div>
-                <div class="flex justify-center">
-
-                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">MySQL</h1>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
-                </div>
-
-            </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/python.png" alt="" style="width: 10vw; height: 20vh;">
-
-                </div>
-                <div class="flex justify-center">
-
-                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Python</h1>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
-                </div>
-
-            </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/Bootstrap.png" alt="" class="" style="width: 10vw; height:20vh;">
-
-                </div>
-                <div class="flex justify-center">
-
-                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Bootstrap</h1>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
-                </div>
-
-            </div>
-            <div class=" rounded p-5 fade-in" style="width: 20vw;">
-                <div class="flex justify-center">
-                    <img src="../static/media/Tailwindcss.svg.png" alt="" class="" style="width: 10vw; height: 20vh;">
-
-                </div>
-                <div class="flex justify-center">
-
-                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Tailwind CSS</h1>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                    <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
-                </div>
-
-            </div>
-
-
-
-
-        </div>
+            
 
     </div>
 
