--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,7 @@
 </style>
 
 <body class="bg-neutral-900">
+
   {% include 'navbar.html' %}
   <div id="particles-js" style="height: 93vh ; ">
 
@@ -28,7 +29,7 @@
           </span><br>développeur web
           </p>
         </div>
-        <h1 class="object-cover  rounded-full hover:scale-110 text-8xl text-black Bienvenue bg-white flex justify-center items-center " 
+        <h1 class="object-cover  rounded-full hover:scale-110 text-8xl text-black Bienvenue bg-white backdrop-blur-sm flex justify-center items-center " 
           style="font-family: 'titre', sans-serif !important;height: 35vh; width: 17vw;">AK</h1>
 
       </div>
