--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
     font-family: 'titre', sans-serif
   }
 </style>
-<nav class="flex items-center bg-white pr-0 justify-between p-6 lg:px-8 sticky top-0 z-40" aria-label="Global"
+<nav class="flex items-center bg-white backdrop-blur-sm pr-0 justify-between p-6 lg:px-8 sticky top-0 z-40" aria-label="Global"
   style="height: 7vh;">
   <div class="flex lg:flex-1">
     <a href="{{url_for('home')}}" class="-m-1.5 p-1.5 text-2xl rounded-full p-2  text-black  " id="singature">
@@ -20,23 +20,23 @@
 
   <div class="flex justify-center lg:flex lg:gap-x-12 " style="width: 100vw;">
     <a href="{{url_for('home')}}"
-      class="text-base  font-bold leading-6 text-gray-900 Bienvenue {% if active_page == 'Home' %}underline underline-offset-8{% endif %}"
+      class="text-base  font-bold leading-6 text-black Bienvenue {% if active_page == 'Home' %}underline underline-offset-8{% endif %}"
       style="font-family: 'titre', sans-serif !important"><i class="bi bi-house-fill"></i> Acceuil</a>
     <a href="{{url_for('projet')}}"
-      class="text-base font-bold leading-6 text-gray-900 Bienvenue{% if active_page == 'Projet' %}underline underline underline-offset-8{% endif %}"
+      class="text-base font-bold leading-6 text-black Bienvenue{% if active_page == 'Projet' %}underline underline underline-offset-8{% endif %}"
       style="font-family: 'titre', sans-serif !important"><i class="bi bi-person-workspace"></i> Projets</a>
     <a href="{{url_for('competence')}}"
-      class="text-base font-bold leading-6 text-gray-900 Bienvenue{% if active_page == 'Competences' %}underline underline underline-offset-8{% endif %}"
+      class="text-base font-bold leading-6 text-black Bienvenue{% if active_page == 'Competences' %}underline underline underline-offset-8{% endif %}"
       style="font-family: 'titre', sans-serif !important"><i class="fa-solid fa-briefcase"></i> Compétences</a>
     <a href="{{url_for('about')}}"
-      class="text-base font-bold leading-6 text-gray-900 Bienvenue{% if active_page == 'About' %}underline underline underline-offset-8{% endif %}"
+      class="text-base font-bold leading-6 text-black Bienvenue{% if active_page == 'About' %}underline underline underline-offset-8{% endif %}"
       style="font-family: 'titre', sans-serif !important"><i class="bi bi-person-square"></i> À propos</a>
     <!-- <a href="{{url_for('cv')}}"
-      class="text-base  font-bold leading-6 text-gray-900 {% if active_page == 'CV' %}underline underline underline-offset-8{% endif %}"><i
+      class="text-base  font-bold leading-6 text-black {% if active_page == 'CV' %}underline underline underline-offset-8{% endif %}"><i
         class="bi bi-file-person-fill"></i> CV</a> -->
 
     <a href="{{url_for('contact')}}"
-      class="text-base font-bold leading-6 text-gray-900 Bienvenue{% if active_page == 'Contact' %}underline underline underline-offset-8{% endif %}"
+      class="text-base font-bold leading-6 text-black Bienvenue{% if active_page == 'Contact' %}underline underline underline-offset-8{% endif %}"
       style="font-family: 'titre', sans-serif !important"><i class="bi bi-person-lines-fill"></i> Contact</a>
   </div>
 
